# cmake_study

./: .gitignore
CMakeProject/: CMakeLists.txt  install.sh  setup.bash
CMakeProject/cmake/: FindProtobuf.cmake  Findgflags.cmake  Findglog.cmake  Findprotobuf.cmake
CMakeProject/config/: config.conf
CMakeProject/src/: CMakeLists.txt  client_node.cpp  server_node.cpp
CMakeProject/src/client/: CMakeLists.txt  client.cpp  client.h
CMakeProject/src/common/: common.h
CMakeProject/src/config/: CMakeLists.txt  config_flags.cpp  config_flags.h
CMakeProject/src/proto/: CMakeLists.txt
CMakeProject/src/proto/raw/: generate_proto.sh  message.proto
CMakeProject/src/server/: CMakeLists.txt  server.cpp  server.h
lijc/gflagsTest/: CMakeLists.txt
lijc/gflagsTest/src/: CMakeLists.txt  test2.cc
lijc/glogTest/: CMakeLists.txt
lijc/glogTest/src/: CMakeLists.txt  glog.cpp
lijc/protobufTest/: CMakeLists.txt
lijc/protobufTest/src/: AddressBook.pb.cc  AddressBook.pb.h  CMakeLists.txt  main.cpp
mafz/: CMakeLists.txt
mafz/src/: main1.cpp  main2.cpp
mafz/src/abc/: abc.pb.cc  abc.pb.h
mafz/src/asd/: asd.pb.cc  asd.pb.h
mafz/src/msg/: abc.proto  asd.proto
mafz/src/udprecv/: CMakeLists.txt  recv.cpp  recv.h
mafz/src/udpsend/: CMakeLists.txt  send.cpp  send.h
xiayx/: gflags_test.cpp
xiayx/MyProtobuf/: myAccount.pb.cc  myAccount.pb.h  myAccount.proto  name.txt
xiayx/cmake/: CMakeLists.txt
xiayx/cmake/src/: CMakeLists.txt
xiayx/glog_test/: CMakeLists.txt  main.cpp
xiayx/udp/: udp_Client.cpp  udp_Server.cpp
zhousl/: CMakeLists.txt
zhousl/client/: CMakeLists.txt  client.cpp  client2.cpp
zhousl/proto/: User.pb.cc  User.pb.h  User.proto
zhousl/server/: CMakeLists.txt  server.cpp
