CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(client LANGUAGES CXX)

FIND_PACKAGE(Protobuf REQUIRED)

find_package(GFlags REQUIRED)
include_directories(${GFLAGS_INCLUDE_DIRS})

find_package(Glog REQUIRED)
include_directories(BEFORE ${GLOG_INCLUDE_DIRS}) 

ADD_EXECUTABLE(client client2.cpp /home/zero/proto/UDP/User.pb.h /home/zero/proto/UDP/User.pb.cc)

SET_PROPERTY(TARGET client PROPERTY CXX_STANDARD 17)
SET_PROPERTY(TARGET client PROPERTY CXX_STANDARD_REQUIRED ON)
SET_PROPERTY(TARGET client PROPERTY LINK_WHAT_YOU_USE ON)
SET_PROPERTY(TARGET client PROPERTY LIBRARY_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/lib)
SET_PROPERTY(TARGET client PROPERTY ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/lib)
SET_PROPERTY(TARGET client PROPERTY RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin)


TARGET_LINK_LIBRARIES(client ${PROTOBUF_LIBRARIES})
target_link_libraries(client  ${GFLAGS_LIBRARIES})
target_link_libraries(client  ${GLOG_LIBRARIES})