CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(server LANGUAGES CXX)

ADD_EXECUTABLE(server server.cpp)

SET_PROPERTY(TARGET server PROPERTY CXX_STANDARD 17)
SET_PROPERTY(TARGET server PROPERTY LIBRARY_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/lib)
SET_PROPERTY(TARGET server PROPERTY ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/lib)
SET_PROPERTY(TARGET server PROPERTY RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin)